--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,8 @@
     "@radix-ui/react-tooltip": "^1.0.6",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-query": "^4.33.0",
+    "@tremor/cli": "^1.1.0",
+    "@tremor/react": "^3.11.1",
     "@types/node": "^20.8.2",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
@@ -36,6 +38,7 @@
     "eslint-config-next": "13.4.19",
     "firebase": "^10.3.0",
     "formik": "^2.4.3",
+    "init": "^0.1.2",
     "lucide-react": "^0.284.0",
     "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
