--- a/app/.env.example
+++ b/app/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:password@localhost:15432/spacedb
+# DATABASE_URL=postgres://postgres:password@localhost:15432/spacedb
