--- a/app/package.json
+++ b/app/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "lint": "next lint",
     "start": "next start",
     "build": "next build",
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.6",
     "@heroicons/react": "^2.0.18",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.6.0",
     "@radix-ui/colors": "^2.1.0",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -31,11 +34,12 @@
     "@types/node": "^20.8.2",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "downloadjs": "^1.4.7",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.3",
     "firebase": "^10.3.0",
     "formik": "^2.4.3",
     "init": "^0.1.2",
@@ -43,10 +47,11 @@
     "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
     "mobx-react-lite": "^4.0.3",
-    "next": "13.4.19",
+    "next": "^14.0.3",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.7.1",
     "tailwind-merge": "^1.14.0",
@@ -57,6 +62,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/downloadjs": "^1.4.3",
     "@types/react": "^18.2.25",
     "autoprefixer": "10.4.15",
@@ -64,6 +70,7 @@
     "postcss": "8.4.28",
     "prettier": "^3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3",
+    "prisma": "^5.6.0",
     "tailwindcss": "3.3.3",
     "webpack": "^5.88.2"
   }
