--- a/app/package.json
+++ b/app/package.json
@@ -37,6 +37,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "downloadjs": "^1.4.7",
     "eslint": "8.47.0",
     "eslint-config-next": "^14.0.3",
@@ -50,8 +51,9 @@
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-day-picker": "^8.9.1",
+    "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.7.1",
     "tailwind-merge": "^1.14.0",
