--- a/app/.env.example
+++ b/app/.env.example
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_VERCEL_ENVIRONMENT=development
 NEXT_PUBLIC_ENVIRONMENT=development
 NEXT_PUBLIC_API_URL=https://localhost:8000/
 NEXTAUTH_URL=https://localhost:3000
