--- a/app/package.json
+++ b/app/package.json
@@ -34,7 +34,6 @@
     "@tanstack/react-table": "^8.11.3",
     "@tremor/cli": "^1.1.0",
     "@tremor/react": "^3.11.1",
-    "@types/node": "^20.8.2",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
@@ -70,14 +69,19 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/downloadjs": "^1.4.3",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.16",
     "@types/react": "^18.2.25",
     "autoprefixer": "10.4.15",
+    "axios-mock-adapter": "^1.22.0",
     "env-cmd": "^10.1.0",
+    "jest": "^29.7.0",
     "postcss": "8.4.28",
     "prettier": "^3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3",
     "prisma": "^5.6.0",
     "tailwindcss": "3.3.3",
+    "ts-jest": "^29.1.2",
     "webpack": "^5.88.2"
   }
 }
