--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@phosphor-icons/react": "^2.0.15",
     "@prisma/client": "^5.6.0",
     "@radix-ui/colors": "^2.1.0",
     "@radix-ui/react-avatar": "^1.0.3",
