--- a/app/package.json
+++ b/app/package.json
@@ -61,8 +61,8 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
-    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.7.1",
+    "sonner": "^1.4.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-radix": "^2.8.0",
