--- a/app/package.json
+++ b/app/package.json
@@ -36,6 +36,8 @@
     "@tanstack/react-table": "^8.11.3",
     "@tremor/cli": "^1.1.0",
     "@tremor/react": "^3.11.1",
+    "@trpc/client": "^10.45.1",
+    "@trpc/react-query": "^10.45.1",
     "@types/eslint": "^8.56.3",
     "@types/node": "^20.8.2",
     "@types/react-dom": "18.2.7",
@@ -66,6 +68,7 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^4.7.1",
     "sonner": "^1.4.1",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-radix": "^2.8.0",
@@ -82,7 +85,7 @@
     "postcss": "8.4.28",
     "prettier": "^3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3",
-    "prisma": "^5.6.0",
+    "prisma": "^5.10.2",
     "tailwindcss": "3.3.3",
     "webpack": "^5.88.2"
   }
