--- a/app/package.json
+++ b/app/package.json
@@ -68,6 +68,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^4.7.1",
+    "react-resizable-panels": "^2.0.11",
     "sonner": "^1.4.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
