--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --experimental-https",
+    "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
     "build": "next build",
@@ -87,7 +87,7 @@
     "postcss": "8.4.28",
     "prettier": "^3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3",
-    "prisma": "^5.10.2",
+    "prisma": "latest",
     "tailwindcss": "3.3.3",
     "webpack": "^5.88.2"
   }
