--- a/app/package.json
+++ b/app/package.json
@@ -77,6 +77,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-radix": "^2.8.0",
     "typescript": "^5.2.2",
+    "uuid": "^9.0.1",
     "yup": "^1.2.0",
     "zod": "^3.22.4"
   },
