--- a/package.json
+++ b/package.json
@@ -40,28 +40,14 @@
     "@tremor/react": "^3.11.1",
     "@trpc/client": "^10.45.1",
     "@trpc/react-query": "^10.45.1",
-    "@types/eslint": "^8.56.3",
-    "@types/node": "^20.8.2",
-    "@types/react-dom": "18.2.7",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "axios": "^1.4.0",
-    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.3.1",
-    "downloadjs": "^1.4.7",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.0",
-    "firebase": "^10.3.0",
-    "formik": "^2.4.3",
     "init": "^0.1.2",
     "lucide-react": "^0.284.0",
-    "mobx": "^6.7.0",
-    "mobx-react": "^7.6.0",
-    "mobx-react-lite": "^4.0.3",
     "next": "latest",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
@@ -78,7 +64,6 @@
     "tailwindcss-radix": "^2.8.0",
     "typescript": "^5.2.2",
     "uuid": "^9.0.1",
-    "yup": "^1.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -92,6 +77,12 @@
     "prettier-plugin-tailwindcss": "^0.5.3",
     "prisma": "latest",
     "tailwindcss": "3.3.3",
-    "webpack": "^5.88.2"
+    "webpack": "^5.88.2",
+    "@types/eslint": "^8.56.3",
+    "@types/node": "^20.8.2",
+    "@types/react-dom": "18.2.7",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2"
   }
 }
