--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^4.7.1",
     "react-resizable-panels": "^2.0.11",
+    "resend": "^3.2.0",
     "sonner": "^1.4.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
