--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,10 @@
-name: lint
+name: Lint
 
 on:
   pull_request:
     branches:
       - main
-      - dev
+      - develop
 
 jobs:
   run-linters:
@@ -14,21 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20.x
-
       - name: Install dependencies
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: install
-          dir: 'app'
+        uses: oven-sh/setup-bun@v1
+
+      - run: bun install
 
       - name: Run linters
-        uses: wearerequired/lint-action@v2
-        with:
-          eslint: true
-          eslint_dir: 'app'
-          prettier: true
-          prettier_dir: 'app'
+        run: bun run lint
