--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.6",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -71,7 +73,13 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/downloadjs": "^1.4.3",
+    "@types/eslint": "^8.56.3",
+    "@types/node": "^20.8.2",
     "@types/react": "^18.2.25",
+    "@types/react-dom": "18.2.7",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "autoprefixer": "10.4.15",
     "env-cmd": "^10.1.0",
     "postcss": "8.4.28",
@@ -79,12 +87,6 @@
     "prettier-plugin-tailwindcss": "^0.5.3",
     "prisma": "latest",
     "tailwindcss": "3.3.3",
-    "webpack": "^5.88.2",
-    "@types/eslint": "^8.56.3",
-    "@types/node": "^20.8.2",
-    "@types/react-dom": "18.2.7",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2"
+    "webpack": "^5.88.2"
   }
 }
