--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "build": "next build",
     "format": "prettier --write .",
-    "db:seed": "node '/lib/faker/mock.tsx'"
+    "db:seed": "bun './lib/mock.ts'"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.6",
