--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "commander": "^12.0.0",
     "date-fns": "^3.3.1",
     "enforce-unique": "^1.3.0",
     "eslint": "^8.57.0",
