--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "next lint",
     "start": "next start",
     "build": "next build",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "db:seed": "bun './lib/faker/mock.ts'"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.6",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "@faker-js/faker": "^8.4.1",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -46,7 +48,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "commander": "^12.0.0",
     "date-fns": "^3.3.1",
+    "enforce-unique": "^1.3.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.0",
     "init": "^0.1.2",
