--- a/package.json
+++ b/package.json
@@ -12,86 +12,89 @@
     "db:seed": "bun './lib/faker/mock.ts'"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.6",
+    "@auth/prisma-adapter": "^2.5.3",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
-    "@faker-js/faker": "^8.4.1",
-    "@heroicons/react": "^2.0.18",
-    "@hookform/resolvers": "^3.3.4",
+    "@faker-js/faker": "^9.0.3",
+    "@heroicons/react": "^2.1.5",
+    "@hookform/resolvers": "^3.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@phosphor-icons/react": "^2.0.15",
-    "@prisma/client": "^5.6.0",
-    "@radix-ui/colors": "^2.1.0",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-hover-card": "^1.0.7",
+    "@phosphor-icons/react": "^2.1.7",
+    "@prisma/client": "^5.20.0",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@t3-oss/env-nextjs": "^0.7.0",
-    "@tanstack/react-query": "^4.33.0",
-    "@tanstack/react-table": "^8.12.0",
-    "@tremor/cli": "^1.1.0",
-    "@tremor/react": "^3.11.1",
-    "@trpc/client": "^10.45.1",
-    "@trpc/react-query": "^10.45.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.3",
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-query-devtools": "^5.59.0",
+    "@tanstack/react-table": "^8.20.5",
+    "@tremor/cli": "^1.2.0",
+    "@tremor/react": "^3.18.3",
+    "@trpc/client": "^11.0.0-rc.553",
+    "@trpc/next": "^11.0.0-rc.553",
+    "@trpc/react-query": "^11.0.0-rc.553",
+    "@trpc/server": "^11.0.0-rc.553",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "cmdk": "^0.2.0",
-    "commander": "^12.0.0",
-    "date-fns": "^3.3.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "commander": "^12.1.0",
+    "date-fns": "^4.1.0",
     "enforce-unique": "^1.3.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint": "^9.12.0",
+    "eslint-config-next": "^14.2.14",
     "init": "^0.1.2",
-    "lucide-react": "^0.284.0",
-    "next": "latest",
-    "next-auth": "^4.24.5",
-    "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-day-picker": "^8.10.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.50.1",
-    "react-icons": "^4.7.1",
-    "react-resizable-panels": "^2.0.11",
-    "resend": "^3.2.0",
-    "sonner": "^1.4.1",
+    "lucide-react": "^0.447.0",
+    "next": "^14.2.14",
+    "next-auth": "^4.24.8",
+    "next-themes": "^0.3.0",
+    "react": "18.3.1",
+    "react-day-picker": "^9.1.3",
+    "react-dom": "18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "react-resizable-panels": "^2.1.4",
+    "resend": "^4.0.0",
+    "sonner": "^1.5.0",
     "superjson": "^2.2.1",
-    "tailwind-merge": "^1.14.0",
+    "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-radix": "^2.8.0",
-    "typescript": "^5.2.2",
-    "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "tailwindcss-radix": "^3.0.5",
+    "typescript": "^5.6.2",
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/downloadjs": "^1.4.3",
-    "@types/eslint": "^8.56.3",
-    "@types/node": "^20.8.2",
-    "@types/react": "^18.2.25",
-    "@types/react-dom": "18.2.7",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "autoprefixer": "10.4.15",
+    "@types/downloadjs": "^1.4.6",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "18.3.0",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "autoprefixer": "10.4.20",
     "env-cmd": "^10.1.0",
-    "postcss": "^8.4.38",
-    "prettier": "^3.0.2",
-    "prettier-plugin-tailwindcss": "^0.5.3",
-    "prisma": "latest",
-    "tailwindcss": "3.3.3",
-    "webpack": "^5.88.2"
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "prisma": "^5.20.0",
+    "tailwindcss": "3.4.13",
+    "webpack": "^5.95.0"
   }
 }
