--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
-    "react-day-picker": "^9.1.3",
+    "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
