--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@trpc/server": "^11.0.0-rc.553",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "1.0.0",
     "commander": "^12.1.0",
     "date-fns": "^4.1.0",
     "enforce-unique": "^1.3.0",
