--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "commander": "^12.1.0",
     "date-fns": "^4.1.0",
     "enforce-unique": "^1.3.0",
+    "immer": "^10.1.1",
     "lucide-react": "^0.447.0",
     "next": "^14.2.14",
     "next-auth": "^4.24.8",
@@ -73,7 +74,8 @@
     "tailwindcss-radix": "^3.0.5",
     "typescript": "^5.6.2",
     "uuid": "^10.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
