--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@faker-js/faker": "^9.0.3",
     "@hookform/resolvers": "^3.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@phosphor-icons/react": "^2.1.7",
     "@prisma/client": "^5.20.0",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
