--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.3",
     "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@faker-js/faker": "^9.0.3",
     "@hookform/resolvers": "^3.9.0",
