--- a/components.json
+++ b/components.json
@@ -10,7 +10,9 @@
     "cssVariables": true
   },
   "aliases": {
-    "components": "components",
-    "utils": "lib/utils"
+    "ui": "@components/ui",
+    "components": "@components",
+    "utils": "@lib/utils",
+    "hooks": "@hooks"
   }
 }
