--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "date-fns": "^4.1.0",
     "enforce-unique": "^1.3.0",
     "immer": "^10.1.1",
-    "lucide-react": "^0.447.0",
-    "next": "^14.2.14",
+    "lucide-react": "^0.452.0",
+    "next": "^14.2.15",
     "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
@@ -69,6 +69,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.4",
+    "recharts": "^2.13.0",
     "resend": "^4.0.0",
     "sonner": "^1.5.0",
     "superjson": "^2.2.1",
