--- a/package.json
+++ b/package.json
@@ -84,17 +84,18 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/downloadjs": "^1.4.6",
+    "@types/eslint": "^8.56.10",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.11",
     "@types/react-dom": "18.3.0",
+    "@types/recharts": "^1.8.29",
     "@types/uuid": "^10.0.0",
-    "@types/eslint": "^8.56.10",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.4",
     "autoprefixer": "10.4.20",
     "env-cmd": "^10.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.4",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
