--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "commander": "^12.1.0",
     "date-fns": "^4.1.0",
     "enforce-unique": "^1.3.0",
+    "framer-motion": "^11.11.9",
     "immer": "^10.1.1",
     "lucide-react": "^0.452.0",
     "next": "^14.2.15",
